[WIP] Added signup form component in landing page component

--- a/src/app/modules/front/landing/landing.component.html
+++ b/src/app/modules/front/landing/landing.component.html
@@ -9,19 +9,17 @@
   </div>
   <div fxFlex class="op-header" fxLayout>
     <div fxFlex class="op-header-cover" fxLayout>
-      <div fxFlex="67" fxLayout>
-        <div fxLayout="column" fxFlex>
-          <h1 align="left" class="op-main-head">
+      <div fxFlex="35" fxLayout>
+        <mat-card fxLayout="column" fxFlex class="op-main-signup-form">
+          <h1 align="center" class="op-main-head">
             Because
             <span class="op-main-head-highlight">O</span>pinions and
             <span class="op-main-head-highlight">F</span>riends,
             <br/> both
             <span class="op-main-head-highlight">M</span>atter!
           </h1>
-          <div fxLayout>
-            <button mat-raised-button color="primary" fxFlex="50" class="op-main-head-button">Get Started</button>
-          </div>
-        </div>
+         <app-signup-form></app-signup-form>
+        </mat-card>
       </div>
     </div>
   </div>
