--- a/src/app/modules/front/landing/landing.component.scss
+++ b/src/app/modules/front/landing/landing.component.scss
@@ -29,14 +29,7 @@ mat-toolbar{
   font-weight: bold;
 }
 
-.op-main-head-button{
-  padding: 1%;
-  font-size: 1.2em;
-  font-family: inherit;
-  font-weight: 400;
-}
-
 .op-main-signup-form{
   margin-top: 4%;
-  padding: 8% 0%;
+  padding-top: 10%;
 }
