--- a/src/app/modules/front/signup-form/signup-form.component.html
+++ b/src/app/modules/front/signup-form/signup-form.component.html
@@ -1,5 +1,5 @@
 <div fxLayout fxFlex fxLayoutAlign="center center">
-  <form fxFlex="80" fxLayout="column">
+  <form fxFlex="90" fxLayout="column">
     <mat-form-field fxFlex>
       <input matInput placeholder="Name">
     </mat-form-field>
@@ -14,7 +14,7 @@
     </mat-form-field>
     <br/>
     <div fxLayout>
-      <button mat-raised-button color="primary" fxFlex class="op-main-head-button">Get Started</button>
+      <button mat-raised-button color="primary" fxFlex class="op-signup-button">Get Started</button>
     </div>
     <p align="center">Are have an account?
       <a href="#">Login</a>
