[WIP] Updated theme color and moved toolbar to app component

--- a/src/app/modules/front/landing/landing.component.scss
+++ b/src/app/modules/front/landing/landing.component.scss
@@ -1,13 +1,3 @@
-.op-spacer{
-  flex: 1 1 auto;
-}
-
-mat-toolbar{
-  min-height: 52px;
-  height: 54px;
-  font-family: inherit;
-}
-
 .op-header-cover {
   background: rgba(63, 63, 63, 0.09);
   padding: 2% 8%;
@@ -25,7 +15,7 @@ mat-toolbar{
 }
 
 .op-main-head-highlight {
-  color: #ff0266 !important;
+  color: #0091EA !important;
   font-weight: bold;
 }
 
