--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>Opinionize</span>
+    <span class="op-spacer"></span>
+  </mat-toolbar-row>
+</mat-toolbar>
 <router-outlet></router-outlet>
+
