--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,11 @@
 @import './../theme/opinionize-theme';
+
+.op-spacer{
+  flex: 1 1 auto;
+}
+
+mat-toolbar{
+  min-height: 52px;
+  height: 54px;
+  font-family: inherit;
+}
