[WIP] Added toolbar to dashboard component and initialized display-posts component

--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -1,3 +1,7 @@
-<p>
-  dashboard works!
-</p>
+<mat-toolbar color="accent">
+  <mat-toolbar-row>
+    <span></span>
+    <span class="op-spacer"></span>
+  </mat-toolbar-row>
+</mat-toolbar>
+<router-outlet></router-outlet>
