--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -4,4 +4,5 @@
     <span class="op-spacer"></span>
   </mat-toolbar-row>
 </mat-toolbar>
+<app-display-posts></app-display-posts>
 <router-outlet></router-outlet>
