--- a/src/app/modules/dashboard/display-posts/display-posts.component.scss
+++ b/src/app/modules/dashboard/display-posts/display-posts.component.scss
@@ -19,8 +19,9 @@
 
 mat-card {
   padding: 0;
-  min-height: 350px;
+  min-height: 380px;
   font-family: inherit;
+  color: #5e5e5e;
 }
 
 .op-idea-card-author-image {
@@ -32,7 +33,7 @@ mat-card {
 }
 
 .op-engagements {
-  margin-top:10px;
+  margin-top:20px;
 }
 
 .op-engagement-icon:nth-child(2) {
@@ -41,5 +42,5 @@ mat-card {
 }
 
 .op-idea-card-btn {
-  margin-top: 20px;
+  margin-top: 10px;
 }
