--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,11 @@ body, html {
   margin: 0;
   font-family: 'Montserrat', sans-serif !important;
 }
+
+.green {
+  text-color: green !important;
+}
+
+.red {
+  text-color: red !important;
+}
