[FIX] Updated font case for idea card

--- a/src/app/modules/dashboard/display-posts/display-posts.component.html
+++ b/src/app/modules/dashboard/display-posts/display-posts.component.html
@@ -4,7 +4,7 @@
       <img src="https://i.gyazo.com/6966fddddd180a7e506d9b80b85aa28a.jpg"
         alt="" class="op-idea-card-author-image" />
       <div fxLayout="column" fxFlex class="op-idea-card-data">
-        <h2 class="op-idea-card-head">Tweet-Rand</h2>
+        <h3 class="op-idea-card-head">TWEET RAND</h3>
         <small class="op-idea-card-description">Application to tweet random stuff</small>
       </div>
       <div fxLayout fxFlex class="op-engagements" fxLayoutAlign="center center">
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div fxLayout="column" fxFlex="12" class="op-idea-card-btn">
-        <button mat-stroked-button color="primary" fxFlex>View Opinions</button>
+        <button mat-stroked-button color="primary" fxFlex>VIEW OPINIONS</button>
       </div>
     </mat-card>
   </div>
