--- a/src/app/modules/dashboard/display-posts/display-posts.component.html
+++ b/src/app/modules/dashboard/display-posts/display-posts.component.html
@@ -4,7 +4,7 @@
       <img src="https://i.gyazo.com/6966fddddd180a7e506d9b80b85aa28a.jpg"
         alt="" class="op-idea-card-author-image" />
       <div fxLayout="column" fxFlex class="op-idea-card-data">
-        <h3 class="op-idea-card-head">TWEET RAND</h3>
+        <h3 class="op-idea-card-head"><i class="zmdi zmdi-bookmark"></i> TWEET RAND</h3>
         <small class="op-idea-card-description">Application to tweet random stuff</small>
       </div>
       <div fxLayout fxFlex class="op-engagements" fxLayoutAlign="center center">
