--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@ body, html {
   padding: 0;
   margin: 0;
   font-family: 'Montserrat', sans-serif !important;
+  background: #f2f2f2;
 }
 
 .green {
