--- a/src/theme/opinionize-theme.scss
+++ b/src/theme/opinionize-theme.scss
@@ -3,7 +3,7 @@
 @include mat-core();
 
 $op-theme-primary: mat-palette($mat-light-blue, A700);
-$op-theme-accent: mat-palette($mat-gray, 300);
+$op-theme-accent: mat-palette($mat-orange, 900);
 $op-theme-warn: mat-palette($mat-red);
 
 $op-theme: mat-light-theme($op-theme-primary, $op-theme-accent, $op-theme-warn);
