[WIP] Added Create opinion button and profile view button; Removed toolbar from dashboard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
   <mat-toolbar-row>
     <span>Opinionize</span>
     <span class="op-spacer"></span>
+    <button mat-raised-button color="accent">Create Opinion</button>
+    <a class="op-profile-toggle-btn" href="#"><img src="https://i.gyazo.com/6966fddddd180a7e506d9b80b85aa28a.jpg" alt="" class="op-profile-toggle-img"/></a>
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
