--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -1,8 +1,3 @@
-<mat-toolbar color="accent">
-  <mat-toolbar-row>
-    <span></span>
-    <span class="op-spacer"></span>
-  </mat-toolbar-row>
-</mat-toolbar>
+<h1 class="op-dashboard-head">My Opinionize</h1>
 <app-display-posts></app-display-posts>
 <router-outlet></router-outlet>
