--- a/src/app/modules/dashboard/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.scss
@@ -1,4 +1,14 @@
-mat-toolbar {
-  min-height: 50px;
-  height: 50px;
+// mat-toolbar {
+//   min-height: 50px;
+//   height: 50px;
+// }
+
+.op-dashboard-head {
+  font-weight: 500;
+  text-align: center;
+  color:#5e5e5e;
+}
+
+body {
+  background: #5e5e5e;
 }
