[WIP] Added route for IdeaDetail Component

--- a/src/app/modules/dashboard/display-posts/display-posts.component.html
+++ b/src/app/modules/dashboard/display-posts/display-posts.component.html
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div fxLayout="column" fxFlex="12" class="op-idea-card-btn">
-        <button mat-stroked-button color="primary" fxFlex>VIEW OPINIONS</button>
+        <a mat-stroked-button color="primary" fxFlex routerLink="/idea/123">VIEW OPINIONS</a>
       </div>
     </mat-card>
   </div>
