--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <mat-toolbar-row>
     <span>Opinionize</span>
     <span class="op-spacer"></span>
-    <button mat-raised-button color="accent">Create Opinion</button>
+    <a mat-raised-button color="accent" href="#">Create Opinion</a>
     <a class="op-profile-toggle-btn" href="#"><img src="https://i.gyazo.com/6966fddddd180a7e506d9b80b85aa28a.jpg" alt="" class="op-profile-toggle-img"/></a>
   </mat-toolbar-row>
 </mat-toolbar>
