--- a/src/app/modules/dashboard/idea-detail/idea-detail.component.html
+++ b/src/app/modules/dashboard/idea-detail/idea-detail.component.html
@@ -1,3 +1,15 @@
-<p>
-  idea-detail works!
-</p>
+<div fxLayout fxFlex="80" fxFlexOffset="10">
+  <mat-card fxFlex fxLayout>
+    <div fxLayout="column" fxFlex>
+      <div fxLayout>
+        <img fxFlex src="https://i.gyazo.com/6966fddddd180a7e506d9b80b85aa28a.jpg" alt="" class="op-idea-detail-head-img" />
+      </div>
+      <div fxLayout="column">
+        <h1 class="op-idea-detail-heading">Twitter Rand
+          <br/>
+          <span class="op-idea-detail-description">Application to tweet random stuff
+          </span></h1>
+      </div>
+    </div>
+  </mat-card>
+</div>
