[WIP] Fixed main toolbar elements alignment to offset 10

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <mat-toolbar color="primary">
   <mat-toolbar-row>
+      <span class="op-spacer-logo"></span>
     <span>Opinionize</span>
     <span class="op-spacer"></span>
     <a mat-raised-button color="accent" href="#">Create Opinion</a>
-    <a class="op-profile-toggle-btn" href="#"><img src="https://i.gyazo.com/6966fddddd180a7e506d9b80b85aa28a.jpg" alt="" class="op-profile-toggle-img"/></a>
+    <a class="op-profile-toggle-btn" href="#">
+      <img src="https://i.gyazo.com/6966fddddd180a7e506d9b80b85aa28a.jpg" alt="" class="op-profile-toggle-img" />
+    </a>
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
-
