[WIP] Updated the display of the idea cards in the dashboard

--- a/src/app/modules/dashboard/display-posts/display-posts.component.html
+++ b/src/app/modules/dashboard/display-posts/display-posts.component.html
@@ -2,8 +2,13 @@
   <div fxLayout fxFlex="25">
     <mat-card fxLayout="column" fxFlex class="op-idea-cards">
       <div fxLayout="column" fxFlex class="op-idea-card-data">
-        <h3 class="op-idea-card-head"><i class="zmdi zmdi-bookmark"></i> TWEET RAND</h3>
-        <small class="op-idea-card-description">Application to tweet random stuff</small>
+        <h3 class="op-idea-card-head" align="center">
+          How about creating a Randomize Tweeting Application?</h3>
+          <br/>
+        <small class="op-idea-card-description">A smart script fetching trending tweets from the Twitter and
+          Retweeting them. Also, it will fetch the trending hashtags and try to use them in some random tweets using 
+          Machine Learning.
+        </small>
       </div>
       <div fxLayout fxFlex class="op-engagements" fxLayoutAlign="center center">
         <div fxFlex="33" class="op-engagement-icon">
