--- a/src/app/modules/dashboard/idea-detail/idea-detail.component.html
+++ b/src/app/modules/dashboard/idea-detail/idea-detail.component.html
@@ -2,9 +2,9 @@
   <mat-card fxFlex fxLayout>
     <div fxLayout="column" fxFlex>
       <div fxLayout="column">
-        <h1 class="op-idea-detail-heading">Twitter Rand
+        <h1 class="op-idea-detail-heading">How about creating a Randomize Tweeting Application?
           <br/>
-          <span class="op-idea-detail-description">Application to tweet random stuff
+          <span class="op-idea-detail-description">Using Machine Learning to create and send tweets
           </span></h1>
       </div>
     </div>
