--- a/src/app/modules/dashboard/display-posts/display-posts.component.scss
+++ b/src/app/modules/dashboard/display-posts/display-posts.component.scss
@@ -9,16 +9,16 @@
 
 .op-idea-card-description {
   margin: 0;
-  margin-left:16px;
+  text-align: justify;
 }
 
 .op-idea-card-data {
-  padding: 0 3% 0 3%;
+  padding: 0 5% 0 5%;
 }
 
 mat-card {
   padding: 0;
-  min-height: 380px;
+  min-height: 350px;
   font-family: inherit;
   color: #5e5e5e;
 }
@@ -32,7 +32,8 @@ mat-card {
 }
 
 .op-engagements {
-  margin-top:20px;
+  font-size: 0.7em;
+  flex: 0.1 1 auto !important;
 }
 
 .op-engagement-icon:nth-child(2) {
@@ -40,10 +41,6 @@ mat-card {
   border-left: 1px solid #ccc;
 }
 
-.op-idea-card-btn {
-  margin-top: 10px;
-}
-
 .op-idea-card-btn > a{
-  margin-top: 10px;
+  margin-top: 5px;
 }
