--- a/src/app/modules/dashboard/display-posts/display-posts.component.scss
+++ b/src/app/modules/dashboard/display-posts/display-posts.component.scss
@@ -1,10 +1,15 @@
+@import '../../../../theme/opinionize-theme';
+
 .op-idea-cards {
   margin-top:20px;
+  border-top: 2px solid $primary;
+  font-family: inherit;
 }
 
 .op-idea-card-head{
   margin: 0;
   margin-top: 15px;
+  color: $gray;
 }
 
 .op-idea-card-description {
